--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Alice Roxa
                     </div> <!-- .countdown -->
                     <p>
 
-Estamos trabalhando na construção do nosso website. Fique ligado para mais informações :)
+Contagem regressiva para chegada dos produtos da Alice Roxa, muitos artesanatos, roupas e acessórios e toda magia para manter sua vibe positiva. :)
   
 <!--                      <br>
                       Subscribe to our newsletter to stay updated on our progress.
